kubernetes/services/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: gameproject
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
