kubernetes/services/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jogoteca
  namespace: gameproject
spec:
  selector:
    app: jogoteca
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
