kubernetes/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jogoteca-ingress
  namespace: gameproject
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: jogoteca.demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jogoteca
                port:
                  number: 80
